--- a/src/assets/ReactArticle/ReactArticle.css
+++ b/src/assets/ReactArticle/ReactArticle.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
   text-align: center;
 }
@@ -151,6 +151,8 @@ button:focus-visible {
     background-color: #282c34;
     padding: 15px;
     text-align: left;
+    text-overflow: ellipsis;
+    overflow: scroll;
   }
   .everyContainer p {
     height: 40%;
@@ -297,4 +299,5 @@ visibility: hidden;
 .carousleH2 {
   font-size: 50px;
   margin-bottom: 60px;
+  line-height: 90%;
 }
