--- a/src/App2.css
+++ b/src/App2.css
@@ -1,43 +1,36 @@
-  #root {
+#root {
   max-width: 1280px;
   margin: 0 auto;
-   padding: 2rem; */
+  padding: 2rem;
   text-align: ;
-} 
-
-.html-articles{
- 
 }
-.article-intro{
-  
 
- padding-left: 15%;
-padding-right: 15%; 
-
+.html-articles {
 }
-.article-intro h3{
+.article-intro {
+  padding-left: 15%;
+  padding-right: 15%;
+}
+.article-intro h3 {
   display: flex;
   justify-content: center;
   text-align: center;
-  
 }
-.article-intro h1{
+.article-intro h1 {
   display: flex;
   justify-content: center;
   text-align: center;
 }
 
-.attribute{
+.attribute {
   background: rgb(184, 185, 188);
   padding-left: 40px;
   padding-right: 40px;
 }
 
-
 .img1 {
   border-radius: 20px;
 }
-
 
 .img2 {
   display: flex;
@@ -45,12 +38,12 @@ padding-right: 15%;
   width: 100%;
   border-radius: 20px;
 }
-.iframe{
+.iframe {
   width: 100%;
   height: 100%;
 }
 
-.html-articles p{
+.html-articles p {
   display: flex;
   justify-items: baseline;
   flex-direction: column;
@@ -72,12 +65,9 @@ padding-right: 15%;
 }
 
 .card {
-  
   /* padding: 2em; */
 }
 
 .read-the-docs {
   color: rgb(132, 57, 57);
-} 
-
- 
+}
